* Fri Mar 20 2009 - Ding-Yi Chen <dchen at redhat.com> - 1.0.4.20090320-1
  Various Setting is now on dialog.
  Integer setting is now revealed.
  MakerDialog.gob is now available.
  Work around of easy symbol input.

* Wed Mar 11 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.3.20090311-1
  IBus Google issue 305:  ibus-chewing.schema -> ibus-chewing.schemas
  IBus Google issue 307:  hardcoded chewing datadir
  Sync chewing candPerPage and IBusTable->page_size
  Sync between IM and keyboard (Experimental)
 
* Tue Mar 03 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.2.20090303-1
  Required gconf2 -> GConf2.
  Fix RPM scriptlet.

* Fri Feb 27 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.1.20090227-1
  Add gconf schema.
  Fix some memory leaking checked.
  Move some function to cmake_modules.
  Fix Google code issue 281
  
* Fri Feb 20 2009 - Ding-Yi Chen <dchen at redhat.com>  - 1.0.0.20090220-1
This is a barely working version for with IBus C.
The build system is converted from autotool to CMake.