@@ -1,8 +1,9 @@
-* Fri Mar 20 2009 - Ding-Yi Chen <dchen at redhat.com> - 1.0.4.20090320-1
+* Mon Mar 23 2009 - Ding-Yi Chen <dchen at redhat.com> - 1.0.4.20090323-1
   Various Setting is now on dialog.
   Integer setting is now revealed.
   MakerDialog.gob is now available.
   Work around of easy symbol input.
+  Fix iBus Google issue 310.
 
 * Wed Mar 11 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.3.20090311-1
   IBus Google issue 305:  ibus-chewing.schema -> ibus-chewing.schemas
